# server/api/swagger/swagger.yaml
@@ -223,27 +223,16 @@ paths:
               default: demo-session-id=123456789012345678901234567890
 
 
-  /users/{username}/logout:
+  /logout:
     x-swagger-router-controller: users
-    post:
+    get:
+      operationId: logout
       summary: Logs out the given user
       description: >
         Users can only log themselves out, not other users. Except the "admin" user, who can log-out anyone.
-      parameters:
-        - $ref: "#/parameters/username"
-        - $ref: "#/parameters/sessionCookie"
       responses:
         204:
           description: Logout was successful
-          headers:
-            Set-Cookie:
-              type: string
-              description: Deletes the session cookie (by making expire in the past)
-              default: demo-session-id=deleted; Expires=Thu, 01-Jan-1970 00:00:01 GMT; Path=/
-        401:
-          description: You tried to log someone else out, and you're not the "admin" user.
-        404:
-          description: The {username} was not found
 
   /trips:
     x-swagger-router-controller: trips
